--- a/hdi_crm/views/crm_opportunity_views.xml
+++ b/hdi_crm/views/crm_opportunity_views.xml
@@ -55,11 +55,11 @@
         </record>
 
         <!-- CRM Opportunity List View -->
-        <record id="view_crm_opportunity_tree" model="ir.ui.view">
-            <field name="name">crm.opportunity.tree</field>
+        <record id="view_crm_opportunity_list" model="ir.ui.view">
+            <field name="name">crm.opportunity.list</field>
             <field name="model">crm.opportunity</field>
             <field name="arch" type="xml">
-                <tree string="Opportunities" sample="1">
+                <list string="Opportunities" sample="1">
                     <field name="name"/>
                     <field name="partner_id"/>
                     <field name="stage_id"/>
@@ -68,7 +68,7 @@
                     <field name="weighted_revenue" sum="Weighted Revenue"/>
                     <field name="date_deadline"/>
                     <field name="user_id"/>
-                </tree>
+                </list>
             </field>
         </record>
 
@@ -136,7 +136,7 @@
         <record id="action_crm_opportunity" model="ir.actions.act_window">
             <field name="name">Opportunities</field>
             <field name="res_model">crm.opportunity</field>
-            <field name="view_mode">kanban,tree,form</field>
+            <field name="view_mode">kanban,list,form</field>
             <field name="view_id" ref="view_crm_opportunity_kanban"/>
             <field name="search_view_id" ref="view_crm_opportunity_search"/>
             <field name="context">{'search_default_filter_active': 1}</field>
