--- a/hdi_crm/views/crm_activity_views.xml
+++ b/hdi_crm/views/crm_activity_views.xml
@@ -43,11 +43,11 @@
         </record>
 
         <!-- CRM Activity List View -->
-        <record id="view_crm_activity_tree" model="ir.ui.view">
-            <field name="name">crm.activity.tree</field>
+        <record id="view_crm_activity_list" model="ir.ui.view">
+            <field name="name">crm.activity.list</field>
             <field name="model">crm.activity</field>
             <field name="arch" type="xml">
-                <tree string="Activities" sample="1">
+                <list string="Activities" sample="1">
                     <field name="name"/>
                     <field name="activity_type"/>
                     <field name="date_scheduled"/>
@@ -55,7 +55,7 @@
                     <field name="priority"/>
                     <field name="user_id"/>
                     <field name="partner_id"/>
-                </tree>
+                </list>
             </field>
         </record>
 
@@ -101,7 +101,7 @@
         <record id="action_crm_activity" model="ir.actions.act_window">
             <field name="name">Activities</field>
             <field name="res_model">crm.activity</field>
-            <field name="view_mode">tree,calendar,form</field>
+            <field name="view_mode">list,calendar,form</field>
             <field name="search_view_id" ref="view_crm_activity_search"/>
         </record>
     </data>
