--- a/hdi_crm/views/crm_customer_views.xml
+++ b/hdi_crm/views/crm_customer_views.xml
@@ -65,11 +65,11 @@
         </record>
 
         <!-- CRM Customer List View -->
-        <record id="view_crm_customer_tree" model="ir.ui.view">
-            <field name="name">crm.customer.tree</field>
+        <record id="view_crm_customer_list" model="ir.ui.view">
+            <field name="name">crm.customer.list</field>
             <field name="model">crm.customer</field>
             <field name="arch" type="xml">
-                <tree string="Customers" sample="1">
+                <list string="Customers" sample="1">
                     <field name="name"/>
                     <field name="partner_id"/>
                     <field name="customer_type"/>
@@ -77,7 +77,7 @@
                     <field name="user_id"/>
                     <field name="annual_revenue" sum="Total Revenue"/>
                     <field name="customer_since"/>
-                </tree>
+                </list>
             </field>
         </record>
 
@@ -108,7 +108,7 @@
         <record id="action_crm_customer" model="ir.actions.act_window">
             <field name="name">Customers</field>
             <field name="res_model">crm.customer</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
             <field name="search_view_id" ref="view_crm_customer_search"/>
             <field name="context">{'search_default_filter_active': 1}</field>
         </record>
