--- a/hdi_crm/views/crm_menu.xml
+++ b/hdi_crm/views/crm_menu.xml
@@ -23,7 +23,7 @@
         <record id="action_crm_stage" model="ir.actions.act_window">
             <field name="name">Stages</field>
             <field name="res_model">crm.stage</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_crm_stage" name="Stages" parent="menu_crm_configuration" sequence="10" action="action_crm_stage"/>
         
@@ -31,7 +31,7 @@
         <record id="action_crm_tag" model="ir.actions.act_window">
             <field name="name">Tags</field>
             <field name="res_model">crm.tag</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_crm_tag" name="Tags" parent="menu_crm_configuration" sequence="20" action="action_crm_tag"/>
         
@@ -39,7 +39,7 @@
         <record id="action_crm_source" model="ir.actions.act_window">
             <field name="name">Lead Sources</field>
             <field name="res_model">crm.source</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_crm_source" name="Lead Sources" parent="menu_crm_configuration" sequence="30" action="action_crm_source"/>
         
@@ -47,7 +47,7 @@
         <record id="action_crm_industry" model="ir.actions.act_window">
             <field name="name">Industries</field>
             <field name="res_model">crm.industry</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_crm_industry" name="Industries" parent="menu_crm_configuration" sequence="40" action="action_crm_industry"/>
         
@@ -55,7 +55,7 @@
         <record id="action_crm_team" model="ir.actions.act_window">
             <field name="name">Sales Teams</field>
             <field name="res_model">crm.team</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_crm_team" name="Sales Teams" parent="menu_crm_configuration" sequence="50" action="action_crm_team"/>
         
@@ -63,7 +63,7 @@
         <record id="action_crm_lost_reason" model="ir.actions.act_window">
             <field name="name">Lost Reasons</field>
             <field name="res_model">crm.lost.reason</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">list,form</field>
         </record>
         <menuitem id="menu_crm_lost_reason" name="Lost Reasons" parent="menu_crm_configuration" sequence="60" action="action_crm_lost_reason"/>
     </data>
