Change CRM team member representation from list to tree view

--- a/hdi_crm/views/crm_team_views.xml
+++ b/hdi_crm/views/crm_team_views.xml
@@ -45,11 +45,11 @@
                         <notebook>
                             <page string="Members">
                                 <field name="crm_team_member_ids">
-                                    <list>
+                                    <tree>
                                         <field name="user_id"/>
                                         <field name="company_id"/>
                                         <field name="active"/>
-                                    </list>
+                                    </tree>
                                     <form>
                                         <group>
                                             <field name="user_id"/>
