--- a/hdi_crm/views/crm_menu.xml
+++ b/hdi_crm/views/crm_menu.xml
@@ -1,6 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <data>
+        <!-- CRM Lead Action -->
+        <record id="action_crm_lead" model="ir.actions.act_window">
+            <field name="name">Leads</field>
+            <field name="res_model">crm.lead</field>
+            <field name="view_mode">kanban,list,form</field>
+            <field name="view_id" ref="view_crm_lead_kanban"/>
+            <field name="search_view_id" ref="view_crm_lead_search"/>
+            <field name="context">{'search_default_filter_active': 1}</field>
+        </record>
+        
+        <!-- CRM Opportunity Action -->
+        <record id="action_crm_opportunity" model="ir.actions.act_window">
+            <field name="name">Opportunities</field>
+            <field name="res_model">crm.opportunity</field>
+            <field name="view_mode">kanban,list,form</field>
+            <field name="view_id" ref="view_crm_opportunity_kanban"/>
+            <field name="search_view_id" ref="view_crm_opportunity_search"/>
+            <field name="context">{'search_default_filter_active': 1}</field>
+        </record>
+        
+        <!-- CRM Customer Action -->
+        <record id="action_crm_customer" model="ir.actions.act_window">
+            <field name="name">Customers</field>
+            <field name="res_model">crm.customer</field>
+            <field name="view_mode">list,form</field>
+            <field name="search_view_id" ref="view_crm_customer_search"/>
+            <field name="context">{'search_default_filter_active': 1}</field>
+        </record>
+        
+        <!-- CRM Activity Action -->
+        <record id="action_crm_activity" model="ir.actions.act_window">
+            <field name="name">Activities</field>
+            <field name="res_model">crm.activity</field>
+            <field name="view_mode">list,calendar,form</field>
+            <field name="search_view_id" ref="view_crm_activity_search"/>
+        </record>
+        
+        <!-- CRM Stages Action -->
+        <record id="action_crm_stage" model="ir.actions.act_window">
+            <field name="name">Stages</field>
+            <field name="res_model">crm.stage</field>
+            <field name="view_mode">list,form</field>
+        </record>
+        
+        <!-- CRM Tags Action -->
+        <record id="action_crm_tag" model="ir.actions.act_window">
+            <field name="name">Tags</field>
+            <field name="res_model">crm.tag</field>
+            <field name="view_mode">list,form</field>
+        </record>
+        
+        <!-- CRM Sources Action -->
+        <record id="action_crm_source" model="ir.actions.act_window">
+            <field name="name">Lead Sources</field>
+            <field name="res_model">crm.source</field>
+            <field name="view_mode">list,form</field>
+        </record>
+        
+        <!-- CRM Industries Action -->
+        <record id="action_crm_industry" model="ir.actions.act_window">
+            <field name="name">Industries</field>
+            <field name="res_model">crm.industry</field>
+            <field name="view_mode">list,form</field>
+        </record>
+        
+        <!-- CRM Teams Action -->
+        <record id="action_crm_team_view" model="ir.actions.act_window">
+            <field name="name">Sales Teams</field>
+            <field name="res_model">crm.team</field>
+            <field name="view_mode">list,form</field>
+        </record>
+        
+        <!-- CRM Lost Reasons Action -->
+        <record id="action_crm_lost_reason" model="ir.actions.act_window">
+            <field name="name">Lost Reasons</field>
+            <field name="res_model">crm.lost.reason</field>
+            <field name="view_mode">list,form</field>
+        </record>
+
         <!-- CRM Main Menu -->
         <menuitem id="menu_crm_root" name="CRM" sequence="10" web_icon="hdi_crm,static/description/icon.png"/>
         
@@ -19,47 +98,12 @@
         <!-- CRM Configuration Menu -->
         <menuitem id="menu_crm_configuration" name="Configuration" parent="menu_crm_root" sequence="100"/>
         
-        <!-- CRM Stages -->
-        <record id="action_crm_stage" model="ir.actions.act_window">
-            <field name="name">Stages</field>
-            <field name="res_model">crm.stage</field>
-            <field name="view_mode">list,form</field>
-        </record>
+        <!-- Configuration Submenu Items -->
         <menuitem id="menu_crm_stage" name="Stages" parent="menu_crm_configuration" sequence="10" action="action_crm_stage"/>
-        
-        <!-- CRM Tags -->
-        <record id="action_crm_tag" model="ir.actions.act_window">
-            <field name="name">Tags</field>
-            <field name="res_model">crm.tag</field>
-            <field name="view_mode">list,form</field>
-        </record>
         <menuitem id="menu_crm_tag" name="Tags" parent="menu_crm_configuration" sequence="20" action="action_crm_tag"/>
-        
-        <!-- CRM Sources -->
-        <record id="action_crm_source" model="ir.actions.act_window">
-            <field name="name">Lead Sources</field>
-            <field name="res_model">crm.source</field>
-            <field name="view_mode">list,form</field>
-        </record>
         <menuitem id="menu_crm_source" name="Lead Sources" parent="menu_crm_configuration" sequence="30" action="action_crm_source"/>
-        
-        <!-- CRM Industries -->
-        <record id="action_crm_industry" model="ir.actions.act_window">
-            <field name="name">Industries</field>
-            <field name="res_model">crm.industry</field>
-            <field name="view_mode">list,form</field>
-        </record>
         <menuitem id="menu_crm_industry" name="Industries" parent="menu_crm_configuration" sequence="40" action="action_crm_industry"/>
-        
-        <!-- CRM Teams -->
         <menuitem id="menu_crm_team" name="Sales Teams" parent="menu_crm_configuration" sequence="50" action="action_crm_team_view"/>
-        
-        <!-- CRM Lost Reasons -->
-        <record id="action_crm_lost_reason" model="ir.actions.act_window">
-            <field name="name">Lost Reasons</field>
-            <field name="res_model">crm.lost.reason</field>
-            <field name="view_mode">list,form</field>
-        </record>
         <menuitem id="menu_crm_lost_reason" name="Lost Reasons" parent="menu_crm_configuration" sequence="60" action="action_crm_lost_reason"/>
     </data>
 </odoo>
